<resources>
    <string name="app_name">VidsApp</string>
    <string name="app_tagline">Cool videos for you!</string>
    <string name="playlist">PlayList</string>
    <string name="action_favorite">My favorites</string>
    <string name="action_watchlist">My watch list</string>
    <string name="action_feedback">Feedback</string>
    <string name="action_share">Share App</string>
    <string name="action_rate">Rate App</string>
    <string name="action_about">About</string>
    <string name="empty">empty</string>
    <string name="videos">Videos</string>
    <string name="play_all">Play all</string>
    <string name="add_favorite">Added to favorite</string>
    <string name="remove_favorite">Removed from favorite</string>
    <string-array name="vids_category">
        <item>Home remedies</item>
        <item>Beauty tips</item>
        <item>Motivational</item>
        <item>Mythological</item>
        <item>Bollywood songs</item>
        <item>Tamil special</item>
        <item>Telugu special</item>
        <item>Shayari/Poetry</item>
        <item>Bollywood movies</item>
        <item>Kids</item>
        <item>Food recipes</item>
        <item>News channels</item>
    </string-array>
    <string-array name="home_remedies_list">
        <item>High blood pressure</item>
        <item>Diabetes</item>
        <item>Obesity</item>
        <item>High cholesterol</item>
        <item>Heart diseases</item>
        <item>Dengue / Fever</item>
        <item>Headache / Migraine</item>
        <item>Liver disorders</item>
        <item>Improving eye sights</item>
        <item>Cough and cold</item>
        <item>Sinusitis</item>
        <item>Gastric</item>
        <item>Giddiness</item>
        <item>Loose motion</item>
        <item>Vomiting</item>
        <item>Constipation</item>
        <item>Dandruff</item>
        <item>Hair fall</item>
    </string-array>
    <string-array name="high_bp_vids">
        <item>FA7bjZsMmo</item>
        <item>gyPplSxbHwY</item>
        <item>Ju4XMdu8Iwk</item>
        <item>6HGnizDUugE</item>
        <item>n5BQ1sJ3exo</item>
        <item>K77FavcJaA0</item>
        <item>KKQXFDFbg0o</item>
        <item>jAHtk5t5h74</item>
        <item>qMQP53wroFk</item>
        <item>HKuQM8ZzJDI</item>
        <item>RQNAa-tqr8</item>
        <item>h_lIuEZeKoo</item>
        <item>Gastric</item>
        <item>Fever</item>
        <item>Giddiness</item>
        <item>FCk1agpTPTk</item>
        <item>hcKOpv5-8rI</item>
        <item>7tNnHW47gqA</item>
        <item>cM6yWrQLmjM</item>
        <item>LaTtxLxBquM</item>
        <item>6KqkkSJ3cMk</item>
        <item>Gz84wcP-f5o</item>
        <item>L0lQk9T_t2A</item>
    </string-array>
    <string-array name="diabetes_vids">
        <item>jHRfDTqPzj4</item>
        <item>_OOWhuC_9Lw</item>
        <item>pcVYYnXXz_c</item>
        <item>fH-pwqi_adA</item>
        <item>2Jx6aoRF4aA</item>
        <item>Yk7Vqsv8lzU</item>
        <item>KD-13vWVegc</item>
        <item>PU1f81fR2P8</item>
        <item>TvmNJkyffJg</item>
        <item>Mw60rgNDxDc</item>
        <item>TrpdKkUR7YY</item>
        <item>za93oH40zUg</item>
        <item>nPxEQq17SC0</item>
        <item>th0ioxMIXkI</item>
        <item>TSweTl3IuU8</item>
        <item>e_uug35a6uU</item>
        <item>uUCDXpKSWa4</item>
        <item>E0QZAxiuXbA</item>
        <item>GY53PCa4GEI</item>
        <item>3RR-WCr7CKI</item>
        <item>vzsQkUFHrdg</item>
        <item>kgCh1KNV7YQ</item>
        <item>YbbRikJM6Jk</item>
    </string-array>
    <string-array name="obesity_vids">
        <item>N5GCCcWqtZ8</item>
        <item>DY7wKeM2RT4</item>
        <item>mIX0gA05SNU</item>
        <item>iPGcAaDQYA8</item>
        <item>0Iz_f_d4Xks</item>
        <item>zPH1LxbVyeM</item>
        <item>SqcIS6M4xRU</item>
        <item>rTiV2QWDhFI</item>
        <item>jRgmKDpm6LA</item>
        <item>cNCnG_H6V6Q</item>
        <item>pbkdSES7eFg</item>
        <item>pQGLY28h1eY</item>
        <item>TqSfgz_Qlo8</item>
        <item>w_Cq1P_8XrA</item>
        <item>nuzNANp2m9o</item>
        <item>qhxTDaBLQ9U</item>
        <item>FRmYPb8hpos</item>
        <item>pPzooDdGpWo</item>
        <item>ysHbgRrTbi0</item>
        <item>HaT1E7Vis4A</item>
        <item>kqwlHHBDtzI</item>
        <item>cw__9cfeqCA</item>
        <item>5aD8ILdMU_g</item>
        <item>eHrKQhEDIak</item>
        <item>vq6-E-BJDjs</item>
        <item>Wstrgv6kV5s</item>
        <item>Ff6npdeP5RY</item>
        <item>P6C9K1EyRZ4</item>
        <item>dkd_DSPI71M</item>
        <item>ot3eK4X3xKc</item>
        <item>DcliUnLiiZI</item>
        <item>T36U4SgyYL4</item>
        <item>fcN37TxBE_s</item>
        <item>WZwnnHKikWU</item>
        <item>LUrrN6cEBRQ</item>
        <item>X1TuhAn6C-g</item>
    </string-array>
    <string-array name="cholesterol_vids">
        <item>0U7YHRW5dyc</item>
        <item>Cxi361Wzxug</item>
        <item>BBdMpu3VOCM</item>
        <item>hsHRnKWmmhQ</item>
        <item>OBe23AstJsA</item>
        <item>UAQFrTrElzw</item>
        <item>0fA-ibsLmZc</item>
        <item>VTjGRigr1wo</item>
        <item>mThRoHm4mlg</item>
        <item>wZtTPyTgBfI</item>
        <item>RKZ1Wk8tIZo</item>
        <item>e0LqR87jkkM</item>
        <item>rIHRmDjsvh4</item>
        <item>c-CoZ1HgCEk</item>
        <item>u18cH4WZWGo</item>
        <item>8N-Gpyb70nw</item>
        <item>BmDDD2arYoo</item>
        <item>Sv_gu4rxN5o</item>
        <item>K69HF4JPNVQ</item>
        <item>yvCbwey35_U</item>
        <item>loyKV3-S9MA</item>
        <item>hJ8-zPL_qCg</item>
        <item>mvgR3qBN4SE</item>
        <item>MdSz0AiSqeE</item>
        <item>BGA12BPYgt4</item>
        <item>gsu8zkjcfDQ</item>
        <item>5drNFzcT33g</item>
        <item>mJXsjWGEx28</item>
        <item>SZSi1Z6tsrU</item>
        <item>PVpe3sRAm6k</item>
        <item>Z9E4oBXFJ-Q</item>
        <item>WT6yjejD5Hw</item>
        <item>2ISBB2lKXyI</item>
    </string-array>
    <string-array name="heart_vids">
        <item>hJZ4iPzR-Zo</item>
        <item>hCl5MEczixk</item>
        <item>VGM_IJ9CUJ4</item>
        <item>iP5Fq23jQDQ</item>
        <item>EncJ7HNLg7Q</item>
        <item>es48YDU0wnU</item>
        <item>NtR3615tg4</item>
        <item>xwOwCYInn8s</item>
        <item>0BdZVvqaXZk</item>
        <item>hcflN_lZKMU</item>
        <item>G29k5pLXF10</item>
        <item>F4A6_Ku59Tw</item>
        <item>0APKNnzRsGM</item>
        <item>xLS06na4QBA</item>
        <item>KWYs2pTui3M</item>
        <item>tzOeyj_XA-o</item>
        <item>kryFOoeVO3E</item>
        <item>QmgNktQryeI</item>
        <item>W3lsC5zfEkk</item>
        <item>hj5fjvkefUg</item>
        <item>rD3X7j3ZErA</item>
        <item>doGPrDkt4Sk</item>
        <item>iIZDlu8wLjA</item>
        <item>5t2DUk94pgc</item>
        <item>URN6ZW81v8U</item>
        <item>XcFkjnXJWWU</item>
        <item>mU3DqaJuzIw</item>
        <item>IxTR5h-Dh9M</item>
        <item>29qes9BlpEk</item>
    </string-array>
    <string-array name="beauty_tips_list">
        <item>Arushi Jain</item>
        <item>Sneha</item>
        <item>Rani</item>
        <item>Trisha</item>
        <item>Herbal beauty tips</item>
    </string-array>
    <string-array name="motivational_list">
        <item>Sandeep Maheshwari</item>
        <item>Him-eesh Madaan</item>
        <item>Ujjwal Patni</item>
        <item>TS Madaan</item>
        <item>Other motivational</item>
    </string-array>
    <string-array name="motiv_sandeep_m_vids">
        <item>VG-5gKQoG2o</item>
        <item>8kobG40CPYw</item>
        <item>AV37vcRBPhs</item>
        <item>NeGWwIxyKKQ</item>
        <item>eF2FST6my_Q</item>
        <item>eG2X_wYSi_U</item>
        <item>EVNNzwHWq78</item>
        <item>RwxC5J8LI4Q</item>
        <item>Moek1mBNZUg</item>
        <item>2ZAlNpfQ5sU</item>
        <item>n4Q1GM_lr94</item>
        <item>sXHSugsbW28</item>
        <item>CdolLmN6OSI</item>
        <item>lQ9pHFFDqAA</item>
        <item>QkKDeMmcjaA</item>
        <item>dD_fk9ELJ24</item>
        <item>KBkmHRpC-bw</item>
        <item>wZSjyCXCSeU</item>
        <item>gXJ0gdU-Gv4</item>
        <item>wvjqFy33HVA</item>
        <item>tqvSHqR7pjU</item>
        <item>KcUfiGgTkbw</item>
        <item>xL3kwFppezc</item>
        <item>7cZDRM28LgM</item>
        <item>AH7k3P6W7V8</item>
        <item>SLgvJfwn-ZM</item>
        <item>n49ki7qUXmg</item>
        <item>ijhJjve1bgU</item>
        <item>HeAcRFIrKFY</item>
    </string-array>
    <string-array name="motiv_ujjwal_patni_vids">
        <item>zLyE9MC-B0g</item>
        <item>gAuc1qzKaqc</item>
        <item>oxU91PMflp8</item>
        <item>mlWa2sf7ISU</item>
        <item>_b857EicE3M</item>
        <item>qna16wI-dM8</item>
        <item>IHM4ObptFrQ</item>
        <item>lkgmXTnuaR4</item>
        <item>4lw2GO_xeag</item>
        <item>zcB947KAO5Q</item>
        <item>Gw5r9Eihgmg</item>
        <item>3uW1skTf0K4</item>
        <item>HnKqp8mxdv0</item>
        <item>qppjPglxpVc</item>
        <item>n57CLqNHJCA</item>
        <item>jAXxbDwniEA</item>
        <item>TD8meaW65EA</item>
        <item>IHM4ObptFrQ</item>
        <item>9iKlR7tdQTc</item>
        <item>NhauyDSKoLQ</item>
        <item>eZK70Fv7SdY</item>
        <item>702YEGKCHOg</item>
        <item>YA0mUH8LWTI</item>
        <item>YEjnpoggzPU</item>
        <item>Pnu1Tplkhpo</item>
        <item>9ozfTvhZDd8</item>
        <item>hqBZ0tdkKFg</item>
        <item>vHbP_3Guslg</item>
        <item>qRBdci7ZbKE</item>
        <item>mOOnguX5VmQ</item>
        <item>80nVeVYtSK4</item>
        <item>WFIIC_4q2cY</item>
        <item>tnxswn1-nAQ</item>
        <item>7wD1s3mbIkA</item>
        <item>edNhBxQNr4M</item>
        <item>EvILRYizlZY</item>
        <item>-66vTStoswc</item>
        <item>7r-gw2XGLPM</item>
        <item>FGzuX1FKrJ0</item>
    </string-array>
    <string-array name="motiv_others_vids">
        <item>8lV5dhPHaR0</item>
        <item>VdLqkn1itJ4</item>
        <item>UB0kc7Fxn48</item>
        <item>vNnxoOzQc-A</item>
        <item>mBL5MHik0kY</item>
        <item>dcSjkCQeVSs</item>
        <item>1STttwsQbsY</item>
        <item>4tT0QpiWrhY</item>
        <item>0jfzN5J19NM</item>
        <item>UeiBF0somEo</item>
        <item>nnFX0Pr3-Zs</item>
        <item>ObiwayK7kro</item>
        <item>FVVxGqOMjTM</item>
        <item>X4U0pIr-IHw</item>
        <item>z1JfpHYugQU</item>
        <item>V3cwnh1nwG0</item>
        <item>dpkS61Dsnwc</item>
        <item>0jp3REDZ9CA</item>
        <item>IzOXkmnFiwI</item>
        <item>CE10fRIBw3M</item>
        <item>E9kzRPDAFCU</item>
        <item>XaUHfzDUvH4</item>
        <item>NJvUv2bPKB4</item>
        <item>wNiM1xc0oNY</item>
        <item>HPf3hxZSJD8</item>
        <item>Rp49YEL_ing</item>
        <item>I160oqy8Tpc</item>
        <item>Z0DlnvZJiDc</item>
        <item>tjAd4JnyJdE</item>
        <item>mk1Cv6kid30</item>
        <item>mk1Cv6kid30</item>
        <item>Q0J4l9WzqBM</item>
        <item>R0wF5W0XqvA</item>
        <item>guXkoXga0Qs</item>
        <item>TckGcxwknYU</item>
        <item>7kRQlYSqw_g</item>
        <item>EVoWrM73sKA</item>
        <item>jfQsOOHTrGA</item>
        <item>v3xZ_wpn_Sk</item>
        <item>HMpWXQpogqI</item>
        <item>eHzAtxW3TzY</item>
        <item>wq-gba5nMrc</item>
        <item>ExKp9e14Xmc</item>
        <item>3pW2TE_U9_A</item>
        <item>zSZUFr26H7M</item>
        <item>2dSs2CeYH2Y</item>
        <item>38ejk8Kl1c8</item>
    </string-array>
</resources>